--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
       <img id="img-box" src="./images/illustration-box-desktop.svg" alt="" />
     </section>
 
-    <!-- <div class="attribution">
+    <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div> -->
+      >. Coded by <a href="https://github.com/Paritosh7/faq-page">Paritosh</a>.
+    </div>
   </body>
 
   <script src="./app.js"></script>
