--- a/index.html
+++ b/index.html
@@ -91,7 +91,10 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="https://github.com/Paritosh7/faq-page">Paritosh</a>.
+      >. Coded by
+      <a href="https://github.com/Paritosh7/faq-page" target="_blank"
+        >Paritosh</a
+      >.
     </div>
   </body>
 
